--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ header {
     
 }
 
-h1 {
+#header-h1 {
     font-size: 11rem;
     font-weight: 900;
     color: var(--text-secundary-w);
@@ -39,7 +39,7 @@ h1 {
     -webkit-text-stroke: var(--stroke);
 }
 
-span {
+#header-span {
     font-size: 4.8rem;
     font-weight: 700;
     color: var(--text-secundary-w);
@@ -80,6 +80,12 @@ span {
     
 }
 
+.div-imagem{
+    
+    border-radius: 44px;
+    border: 3px solid #000;
+}
+
 #section-eolica{
     display: flex;
     background-image: url("../images/Energ_Eolica.png");
@@ -97,16 +103,16 @@ span {
     flex-direction: column;
     align-items: center;
     gap: 40px;
-    height: 80%;
+    height: 100%;
+    width: 30%;
 }
 
 #eolica-imagem{
+    background-image: url("../images/Energ_Eolica_frente.png");
+    background-position-x: 32rem;
+    background-position-y: -8rem;
     width: 50%;
-    height: 50%;
-    border-radius: 44px;
-    border: 3px solid #000;
-    
-    
+    height: 70%;
 }
 
 #eolica-titulo{
@@ -125,10 +131,63 @@ span {
     font-weight: 400;
     color: var(--text-secundary-b);
     font-family: var(--font-default);
-    width: 60%;
-    border-left: 0.5px solid #000;
+    border-left: 1px solid #000;
     padding-left: 2%;
-    height:80%;
     background-color: #ffffff40;
     border-radius: 20px;
+    width: 60%;
+}
+
+#section-solar{
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    background-size: cover;
+    flex-wrap: nowrap;
+    background-image: url("../images/Energ_Solar_Fundo.png");
+    padding: 1.3rem 5rem 3.7rem 8rem;
+    background-repeat: no-repeat;
+    background-position-y: -20.8rem;
+    gap: 8%;
+    align-items: center;
+}
+
+#solar-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    height: 100%;
+    width: 60%;
+    
+}
+#solar-p{
+    font-size: 2.4rem;
+    font-weight: 400;
+    color: var(--text-secundary-b);
+    font-family: var(--font-default);
+    border-left: 1px solid #000;
+    padding-left: 2%;
+    background-color: #ffffff40;
+    border-radius: 20px;
+    width: 100%;
+}
+
+#solar-imagem{
+    background-image: url("../images/Energ_Solar_Frente.png");
+    background-position-x: 40rem;
+    background-position-y: -1rem;   
+    width: 20%;
+    height: 70%;
+}
+
+#solar-h2{
+    font-size: 12.8rem;
+    font-weight: 700;
+    color: #FFC93F;
+    font-family: var(--font-heading);
+    text-shadow: var(--text-secundary-b);
+    -webkit-text-stroke: var(--stroke);
+    line-height: 13rem;
+    margin-left: 4.4rem;
 }
